Fixed inconsistent spacing on games page, Adjusted vertical positioning of project showcases

--- a/games/style.css
+++ b/games/style.css
@@ -1,7 +1,7 @@
 .carousel-container {
   position: relative;
   width: 100%;
-  height: 64vh;
+  height: 75vh;
   display: flex;
   align-items: center;
   justify-content: flex-start;
@@ -63,15 +63,15 @@
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  background: rgba(130, 74, 29, 0.8);
+  background: rgba(130, 74, 29, 0.5);
   border: none;
   color: white;
   font-size: 48px;
   width: 46px;
-  height: 65px;
+  height: 75px;
   cursor: pointer;
   z-index: 100;
-  border-radius: 25%;
+  border-radius: 12%;
   display: flex;
   align-items: center;
   justify-content: center;
